@@ -202,7 +202,7 @@ verilator_profcfunc - Read gprof report created with --prof-cfuncs
 =head1 SYNOPSIS
 
   verilator --prof-cfuncs ....
-  gcc --ggdb -pg ....
+  gcc ....
   {run executable}
   gprof
   verilator_profcfuncs gprof.out
