@@ -253,6 +253,7 @@ private:
     bool m_pinsScBigUint = false;   // main switch: --pins-sc-biguint
     bool m_pinsUint8 = false;       // main switch: --pins-uint8
     bool m_ppComments = false;      // main switch: --pp-comments
+    bool m_profC = false;           // main switch: --prof-c
     bool m_profCFuncs = false;      // main switch: --prof-cfuncs
     bool m_profThreads = false;     // main switch: --prof-threads
     bool m_protectIds = false;      // main switch: --protect-ids
@@ -462,6 +463,7 @@ public:
     bool pinsScBigUint() const { return m_pinsScBigUint; }
     bool pinsUint8() const { return m_pinsUint8; }
     bool ppComments() const { return m_ppComments; }
+    bool profC() const { return m_profC; }
     bool profCFuncs() const { return m_profCFuncs; }
     bool profThreads() const { return m_profThreads; }
     bool protectIds() const { return m_protectIds; }
